      directive before the comment directive started:
              self.verify("#if 1 ###comment \n$aStr\n#end if\n",
                              "blarg\n")
      
      Code that makes use of explicit directive close tokens immediately followed by 
      another directive will still work as expected:
      #if test##for i in range(10)# foo $i#end for##end if
          

2.0rc6 (Feb 4, 2006)
  !!!THIS RELEASE REQUIRES RECOMPILATION OF ALL COMPILED CHEETAH TEMPLATES!!!
  Core Changes: [TR]      
    - added a Cheetah version dependency check that raises an assertion if a
      template was compiled with a previous version of Cheetah whose templates
      must be recompiled.

    - made the Cheetah compilation metadata accessible via class attributes in
      addition to module globals

    - major improvement to exception reporting in cases where bad Python syntax
      slips past the Cheetah parser:
      """
         File "/usr/lib/python2.4/site-packages/Cheetah/Template.py", line 792, in compile
           raise parseError
       Cheetah.Parser.ParseError: 
       
       Error in the Python code which Cheetah generated for this template:
       ================================================================================
       
       invalid syntax (DynamicallyCompiledCheetahTemplate.py, line 86)
       
       Line|Python Code
       ----|-------------------------------------------------------------
       84  |        
       85  |        write('\n\n')
       86  |        for i an range(10): # generated from line 4, col 1
                           ^
       87  |            _v = i # '$i' on line 5, col 3
       88  |            if _v is not None: write(_filter(_v, rawExpr='$i')) # from line 5, col 3.
       89  |            write('\n')
       
       ================================================================================
       
       Here is the corresponding Cheetah code:
       
       Line 4, column 1
       
       Line|Cheetah Code