@@ -32,6 +32,16 @@ release
       Code that makes use of explicit directive close tokens immediately followed by 
       another directive will still work as expected:
       #if test##for i in range(10)# foo $i#end for##end if
+
+  Core changes by MO:
+    - WebSafe and the other optional filters in Filters.py now use
+      RawOrEncodedUnicode instead of Filter as a base class.  This allows them
+      to work with Unicode values containing non-ASCII characters.
+          User-written custom filters should inherit from 
+      RawOrEncodedUnicode and call the superclass .filter() instead of str().
+      str() as of Python 2.4.2 still converts Unicode to string using
+      ASCII codec, which raises UnicodeEncodeError if it contains non-ASCII
+      characters.
           
 
 2.0rc6 (Feb 4, 2006)
